# a2a-society

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-27-hive-design.md  2026-03-27-hive-implementation.md
examples/startup/: README.md  ceo.yaml  run.sh  seo-agent.yaml  vp-marketing.yaml
hive/: auth.py  budget.py  claude.py  cli.py  client.py  config.py  dashboard.py  discovery.py  executor.py  initiative.py  models.py  org_memory.py  prompt_builder.py  queue.py  reporting.py  server.py  subtask_tracker.py
hive/registry/: __init__.py  server.py  store.py
tests/: conftest.py  test_artifacts.py  test_budget.py  test_callbacks.py  test_claude.py  test_cli.py  test_client.py  test_config.py  test_dashboard.py  test_discovery.py  test_initiative.py  test_org_memory.py  test_queue.py  test_queue_delegation_requeue.py  test_registry.py  test_reporting.py  test_server.py  test_spec_fixes.py
tests/integration/: test_two_agents.py
tests/integration/configs/: agent-a.yaml  agent-b.yaml
