[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk",
    "claude-agent-sdk",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "click",
    "gitpython",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "respx",
]
