[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-society"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk",
    "claude-agent-sdk",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "click",
    "gitpython",
    "pyyaml",
    "rich",
]

[project.scripts]
a2a-society = "a2a-society.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "respx",
]
